--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -91,6 +91,20 @@ textarea {
 	display: none;
 }
 
+.desktop {
+	display: none;
+}
+
+.center {
+	float: center;
+}
+.right {
+	float: right;
+}
+.left {
+	float: left;
+}
+
 /* Phone */
 @media only screen and (min-width: 480px) {
 
@@ -106,7 +120,6 @@ textarea {
 
 article {
 	background-color: #1D1D1C;
-	float: left;
 	margin: 0.5%;
 	padding: 0.5%;
 	text-align: center;
