--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -31,9 +31,13 @@ nav {
 }
 
 nav ul {
-	padding: 0;
+	padding: 2px;
 	margin-top: 1em;
 	margin-bottom: 1em;
+	border: 3px solid grey;
+	border-radius: 25px;
+	width: 200px;
+	display: inline;
 }
 
 nav li {
