--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -100,7 +100,10 @@ textarea {
 }
 
 .center {
-	float: center;
+	margin: auto;
+	width: 50%;
+	border: 3px solid grey;
+	padding: 10px;
 }
 .right {
 	float: right;
@@ -128,6 +131,7 @@ article {
 	padding: 0.5%;
 	text-align: center;
 	width: 31%;
+	border-radius: 3em 3em 3em 3em;
 }
 
 article img {
@@ -161,7 +165,6 @@ aside {
 @media only screen and (min-width: 840px) {
 
 table {
-	border: 0.2em solid #ffffff;
 	border-collapse: collapse;
 	margin-left: auto;
 	margin-right: auto;
@@ -169,7 +172,7 @@ table {
 }
 
 th, td {
-	border: 0.1em solid #ffffff;
+	border: 3px solid grey;
 	padding: 1em;
 }
 
@@ -180,6 +183,10 @@ th {
 
 .schedule {
 	display: inline;
+	margin: auto;
+	width: 50%;
+	padding: 10px;
+	text-align: center;
 }
 .mobile {
 	display: none;
