--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -83,7 +83,8 @@ select {
 }
 
 textarea {
-	width: 20%;
+	width: 30%;
+	height: 10em;
 }
 
 .hidden {
@@ -110,6 +111,12 @@ textarea {
 }
 .left {
 	float: left;
+}
+
+.form { 
+	border: 5px solid grey;
+	border-radius: 3em 3em 3em 3em;
+	padding: 20px;
 }
 
 /* Phone */
@@ -169,6 +176,10 @@ table {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
+}
+
+tr {
+	text-align: center;
 }
 
 th, td {
