--- a/library assignment/css/styles2.css
+++ b/library assignment/css/styles2.css
@@ -81,77 +81,92 @@ textarea {
 	height: 10em;
 }
 
-div.gallery {
-	margin: 5px;
-	border: 1px solid #ccc;
-	float: left;
+* {
+  box-sizing: border-box;
 }
 
-div.gallery:hover {
-	border: 1px solid #777;
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
 }
 
-div.gallery img {
-	width: 100%;
-	height: auto;
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
 
-div.desc {
-	padding: 15px;
-	text-align: center;
-	color: white;
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
 }
 
-/* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8; 
-  cursor: pointer; 
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.column img:hover {
-  opacity: 1;
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Clear floats after the columns */
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 16.66%;
 }
 
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
 }
 
-/* Closable button inside the expanded image */
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
+.active,
+.demo:hover {
+  opacity: 1;
 }
-
-
 
 .hidden {
 	font-size: .5em;
